<resources>
    <string name="app_name">CropImage</string>
    <string name="rotation_value">Click to change rotation: %1$s</string>
    <string name="ic_rotate_left_24">Rotate counter clockwise</string>
    <string name="rotate">Rotate</string>
    <string name="ic_rotate_right_24">Rotate</string>
    <string name="crop_image_menu_crop">Crop</string>
    <string name="ic_flip_24">Flip</string>
    <string name="ic_flip_24_horizontally">Flip horizontally</string>
    <string name="ic_flip_24_vertically">Flip vertically</string>
    <string name="pick_image_chooser_title">Select source</string>
    <string name="pick_image_camera">Camera</string>
    <string name="pick_image_gallery">Gallery</string>

    <string name="fit_center">Fit Center</string>
    <string name="center">Center</string>
    <string name="center_crop">Center Crop</string>
    <string name="center_inside">Center Inside</string>
    <string name="rectangle">Rectangle</string>
    <string name="oval">Oval</string>
    <string name="rectangleVerticalOnly">Rectangle - vertical only</string>
    <string name="rectangleHorizontalOnly">Rectangle - horizontal only</string>
    <string name="off">Off</string>
    <string name="on_touch">On Touch</string>
    <string name="on">ON</string>
    <string name="ratio_16_9">16,9</string>
    <string name="ratio_4_3">4,3</string>
    <string name="ratio_2_1">2,1</string>
    <string name="ratio_1_1">1,1</string>
    <string name="free">Free</string>
    <string name="ratio">Ratio</string>
    <string name="guidelines">Guidelines</string>
    <string name="crop_shape">Crop Shape</string>
    <string name="scale_type">Scale Type</string>
    <string name="max_zoom_level">Max Zoom Level</string>
    <string name="zoom_2">2</string>
    <string name="zoom_4">4</string>
    <string name="zoom_8">8</string>
    <string name="auto_zoom">Auto Zoom</string>
    <string name="multi_touch">Multi Touch</string>
    <string name="center_move">Enable movement by dragging center</string>
    <string name="show_crop_overlay">Show Crop Overlay</string>
    <string name="show_progress_bar">Show Progress Bar</string>
    <string name="flip_horizontal">Flip Horizontal</string>
    <string name="flip_vertical">Flip Vertical</string>
    <string name="reset">Reset Crop Rect</string>
    <string name="save">Save</string>
    <string name="done">Done</string>
    <string name="crop_corner__shape">Corner Shape</string>
    <string name="show_crop_label_text">Show Crop Label Text</string>
    <string name="default_crop_label_text">Sample crop label</string>
    <string name="basic_cropper">Basic Cropper</string>
    <string name="advance_cropper">Advance Cropper</string>
    <string name="cropped_result_preview">Cropped result preview</string>
    <string name="crop_options">Crop Options</string>
    <string name="permissions_permanently_denied">Permissions permanently denied: %1$s. Please enable them in settings.</string>
    <string name="permissions_denied">Permissions denied: %1$s</string>
</resources>