<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:background="@drawable/bg_purple_gradient">

  <ImageView
      android:id="@+id/backBtn"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:background="?attr/selectableItemBackgroundBorderless"
      android:padding="@dimen/keyline_x4"
      android:contentDescription="@string/pick_image_chooser_title"
      app:srcCompat="@drawable/ic_arrow_back_24"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent" />

  <TextView
      android:id="@+id/saveBtn"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:background="?attr/selectableItemBackgroundBorderless"
      android:padding="@dimen/keyline_x4"
      android:text="@string/save"
      android:textColor="@color/orange"
      android:textStyle="bold"
      android:textSize="16sp"
      app:layout_constraintBottom_toBottomOf="@id/backBtn"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintTop_toTopOf="@id/backBtn" />

  <ImageView
      android:id="@+id/canhubLogo"
      android:layout_width="48dp"
      android:layout_height="48dp"
      android:layout_marginTop="@dimen/keyline_x2"
      android:importantForAccessibility="no"
      app:srcCompat="@drawable/ic_gear_24"
      app:tint="@color/orange"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent" />

  <TextView
      android:id="@+id/rotateText"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:padding="@dimen/keyline_x4"
      android:gravity="center"
      android:textIsSelectable="false"
      tools:text="@string/rotation_value"
      android:textColor="@color/white"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@id/canhubLogo" />

  <TextView
      android:id="@+id/expectedImageSize"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:padding="@dimen/keyline_x4"
      android:gravity="center"
      tools:text="Crop Rect"
      android:textIsSelectable="false"
      android:textColor="@color/white"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@id/rotateText" />

  <com.gadware.android.cropimage.CropImageView
      android:id="@+id/cropImageView"
      android:layout_width="0dp"
      android:layout_height="0dp"
      android:layout_marginStart="@dimen/keyline_x2"
      android:layout_marginTop="@dimen/keyline"
      android:layout_marginEnd="@dimen/keyline_x2"
      android:layout_marginBottom="@dimen/keyline_x2"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@id/expectedImageSize" />

  <com.google.android.material.floatingactionbutton.FloatingActionButton
      android:id="@+id/settings"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_margin="@dimen/keyline_x4"
      android:contentDescription="@string/max_zoom_level"
      app:srcCompat="@drawable/ic_gear_24"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
